[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nethergaze"
version = "0.1.0"
description = "Real-time TUI dashboard correlating VPS TCP connections with nginx access logs"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nethergaze Contributors" }]
readme = "README.md"
keywords = ["vps", "monitoring", "tui", "network", "nginx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "textual>=0.82.0",
    "psutil>=5.9.0",
    "geoip2>=4.8.0",
    "ipwhois>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/OuttaMyDepth/NetherGaze"
Repository = "https://github.com/OuttaMyDepth/NetherGaze"
Issues = "https://github.com/OuttaMyDepth/NetherGaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.8",
]

[project.scripts]
nethergaze = "nethergaze.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nethergaze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
